--- a/scratch-nn.ipynb
+++ b/scratch-nn.ipynb
@@ -488,7 +488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 213,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -514,9 +514,9 @@
     "    def backward(self, X, y, learning_rate):\n",
     "        # Backward propagation\n",
     "        error = self.loss_derivative(y, self.output_layer)\n",
-    "        d_output_layer = error * self.activation(self.output_layer, derivative=True)\n",
+    "        d_output_layer = error * self.activation(self.output_layer,)\n",
     "        error_hidden_layer = d_output_layer.dot(self.weights2.T)\n",
-    "        d_hidden_layer = error_hidden_layer * self.activation(self.hidden_layer, derivative=True)\n",
+    "        d_hidden_layer = error_hidden_layer * self.activation(self.hidden_layer)\n",
     "        \n",
     "        # Update the weights and biases\n",
     "        self.weights2 -= learning_rate * self.hidden_layer.T.dot(d_output_layer)\n",
@@ -545,17 +545,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": 214,
    "metadata": {},
    "outputs": [],
    "source": [
     "y_train_one_hot = np.zeros((train_labels.shape[0], 10))\n",
-    "y_train_one_hot[np.arange(train_labels.shape[0]), train_labels] = 1"
+    "# one-hot encoding the labels into form [0, 0, 0, 1, 0, 0, 0, 0, 0, 0]\n",
+    "for i in range(len(train_labels)):\n",
+    "    y_train_one_hot[i, train_labels[i]] = 1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 197,
+   "execution_count": 215,
    "metadata": {},
    "outputs": [
     {
@@ -564,7 +566,7 @@
        "(60000, 10)"
       ]
      },
-     "execution_count": 197,
+     "execution_count": 215,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -575,7 +577,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
+   "execution_count": 216,
    "metadata": {},
    "outputs": [
     {
@@ -584,7 +586,7 @@
        "array([0., 0., 0., 0., 0., 1., 0., 0., 0., 0.])"
       ]
      },
-     "execution_count": 199,
+     "execution_count": 216,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -595,26 +597,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 217,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = NeuralNetwork(input_size=784, hidden_size=128, output_size=10, activation='relu')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 233,
    "metadata": {},
    "outputs": [
     {
-     "ename": "IndexError",
-     "evalue": "too many indices for array: array is 0-dimensional, but 2 were indexed",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[181], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m neural_network\u001b[39m.\u001b[39;49mtrain(train_data, train_labels, learning_rate\u001b[39m=\u001b[39;49m\u001b[39m0.01\u001b[39;49m, epochs\u001b[39m=\u001b[39;49m\u001b[39m1\u001b[39;49m)\n",
-      "Cell \u001b[1;32mIn[177], line 55\u001b[0m, in \u001b[0;36mNeuralNetwork.train\u001b[1;34m(self, X, y_true, learning_rate, epochs)\u001b[0m\n\u001b[0;32m     53\u001b[0m y_pred \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mforward_propagation(X)\n\u001b[0;32m     54\u001b[0m loss \u001b[39m=\u001b[39m LossFunctions\u001b[39m.\u001b[39msoftmax_cross_entropy(y_true, y_pred)\n\u001b[1;32m---> 55\u001b[0m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mbackward_propagation(X, y_true, learning_rate)\n\u001b[0;32m     56\u001b[0m \u001b[39mif\u001b[39;00m epoch \u001b[39m%\u001b[39m \u001b[39m100\u001b[39m \u001b[39m==\u001b[39m \u001b[39m0\u001b[39m:\n\u001b[0;32m     57\u001b[0m     \u001b[39mprint\u001b[39m(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mEpoch \u001b[39m\u001b[39m{\u001b[39;00mepoch\u001b[39m}\u001b[39;00m\u001b[39m: Loss = \u001b[39m\u001b[39m{\u001b[39;00mloss\u001b[39m}\u001b[39;00m\u001b[39m\"\u001b[39m)\n",
-      "Cell \u001b[1;32mIn[177], line 21\u001b[0m, in \u001b[0;36mNeuralNetwork.backward_propagation\u001b[1;34m(self, X, y_true, learning_rate)\u001b[0m\n\u001b[0;32m     19\u001b[0m A \u001b[39m=\u001b[39m [X] \u001b[39m+\u001b[39m [\u001b[39mNone\u001b[39;00m] \u001b[39m*\u001b[39m \u001b[39mlen\u001b[39m(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mlayers)\n\u001b[0;32m     20\u001b[0m Z \u001b[39m=\u001b[39m [\u001b[39mNone\u001b[39;00m] \u001b[39m*\u001b[39m \u001b[39mlen\u001b[39m(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mlayers)\n\u001b[1;32m---> 21\u001b[0m dA \u001b[39m=\u001b[39m LossFunctions\u001b[39m.\u001b[39;49msoftmax_cross_entropy(y_true, A[\u001b[39m-\u001b[39;49m\u001b[39m1\u001b[39;49m])\n\u001b[0;32m     23\u001b[0m \u001b[39mfor\u001b[39;00m i \u001b[39min\u001b[39;00m \u001b[39mreversed\u001b[39m(\u001b[39mrange\u001b[39m(\u001b[39mlen\u001b[39m(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mlayers))):\n\u001b[0;32m     24\u001b[0m     layer \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mlayers[i]\n",
-      "Cell \u001b[1;32mIn[176], line 14\u001b[0m, in \u001b[0;36mLossFunctions.softmax_cross_entropy\u001b[1;34m(y_true, y_pred)\u001b[0m\n\u001b[0;32m     12\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39msoftmax_cross_entropy\u001b[39m(y_true, y_pred):\n\u001b[0;32m     13\u001b[0m     y_true_one_hot \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39mzeros_like(y_pred)\n\u001b[1;32m---> 14\u001b[0m     y_true_one_hot[np\u001b[39m.\u001b[39;49marange(\u001b[39mlen\u001b[39;49m(y_true)), y_true] \u001b[39m=\u001b[39m \u001b[39m1\u001b[39m\n\u001b[0;32m     15\u001b[0m     y_true_one_hot \u001b[39m=\u001b[39m y_true_one_hot\u001b[39m.\u001b[39mreshape(y_pred\u001b[39m.\u001b[39mshape)\n\u001b[0;32m     17\u001b[0m     epsilon \u001b[39m=\u001b[39m \u001b[39m1e-15\u001b[39m\n",
-      "\u001b[1;31mIndexError\u001b[0m: too many indices for array: array is 0-dimensional, but 2 were indexed"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch  0  loss:  34.53877639491066\n"
      ]
     }
    ],
    "source": [
-    "neural_network.train(train_data, train_labels, learning_rate=0.01, epochs=1)"
+    "model.train(X_train, y_train_one_hot, epochs=3, learning_rate=0.01)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 231,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_pred = model.predict(test_data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 228,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy:  0.098\n"
+     ]
+    }
+   ],
+   "source": [
+    "accuracy = np.mean(y_pred == test_labels)\n",
+    "print(\"Accuracy: \", accuracy)"
    ]
   },
   {
