--- a/scratch-nn.ipynb
+++ b/scratch-nn.ipynb
@@ -365,13 +365,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 314,
    "metadata": {},
    "outputs": [],
    "source": [
     "class Activation:\n",
     "    def softmax(self, z):\n",
-    "        temp = np.sum(np.exp(z), axis=1, keepdims=True) \n",
+    "        temp = np.sum(np.exp(z)) \n",
     "        return np.exp(z) / temp\n",
     "    \n",
     "    def relu(self, z):\n",
@@ -463,7 +463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 267,
+   "execution_count": 345,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -480,7 +480,7 @@
     "    \n",
     "    def softmax_cross_entropy(y_true, y_pred):\n",
     "        epsilon = 1e-15\n",
-    "        y_pred = np.clip(y_pred, epsilon, 1 - epsilon)\n",
+    "        # y_pred = np.clip(y_pred, epsilon, 1 - epsilon)\n",
     "            \n",
     "        ce = -np.sum(y_true * np.log(y_pred), axis=1)\n",
     "        return ce"
@@ -488,7 +488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 268,
+   "execution_count": 346,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -499,33 +499,28 @@
     "        self.output_size = output_size\n",
     "        self.activation = [Activation().use(activation[0]), Activation().use(activation[1])]\n",
     "        \n",
-    "        # Initialize the weights and biases\n",
     "        self.weights1 = np.random.randn(self.input_size, self.hidden_size)\n",
     "        self.biases1 = np.zeros((1, self.hidden_size))\n",
     "        self.weights2 = np.random.randn(self.hidden_size, self.output_size)\n",
     "        self.biases2 = np.zeros((1, self.output_size))\n",
     "        \n",
     "    def forward(self, X):\n",
-    "        # Forward propagation\n",
     "        self.hidden_layer = self.activation[0](np.dot(X, self.weights1) + self.biases1)\n",
     "        self.output_layer = self.activation[1](np.dot(self.hidden_layer, self.weights2) + self.biases2)\n",
     "        return self.output_layer\n",
     "    \n",
     "    def backward(self, X, y, learning_rate):\n",
-    "        # Backward propagation\n",
     "        error = self.loss_derivative(y, self.output_layer)\n",
-    "        d_output_layer = error * self.activation[1](self.output_layer,)\n",
+    "        d_output_layer = error * self.activation[1](self.output_layer)\n",
     "        error_hidden_layer = d_output_layer.dot(self.weights2.T)\n",
     "        d_hidden_layer = error_hidden_layer * self.activation[0](self.hidden_layer)\n",
     "        \n",
-    "        # Update the weights and biases\n",
     "        self.weights2 -= learning_rate * self.hidden_layer.T.dot(d_output_layer)\n",
     "        self.biases2 -= learning_rate * np.sum(d_output_layer, axis=0, keepdims=True)\n",
     "        self.weights1 -= learning_rate * X.T.dot(d_hidden_layer)\n",
     "        self.biases1 -= learning_rate * np.sum(d_hidden_layer, axis=0)\n",
     "        \n",
     "    def train(self, X, y, epochs, learning_rate):\n",
-    "        # Train the model\n",
     "        for i in range(epochs):\n",
     "            output = self.forward(X)\n",
     "            loss = LossFunctions.softmax_cross_entropy(y, output)\n",
@@ -534,7 +529,6 @@
     "                print(\"Epoch \", i, \" loss: \", np.mean(loss))\n",
     "                \n",
     "    def predict(self, X):\n",
-    "        # Make predictions\n",
     "        output = self.forward(X)\n",
     "        predictions = np.argmax(output, axis=1)\n",
     "        return predictions\n",
@@ -545,7 +539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 269,
+   "execution_count": 347,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -557,7 +551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 270,
+   "execution_count": 348,
    "metadata": {},
    "outputs": [
     {
@@ -566,7 +560,7 @@
        "(60000, 10)"
       ]
      },
-     "execution_count": 270,
+     "execution_count": 348,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -577,7 +571,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 271,
+   "execution_count": 349,
    "metadata": {},
    "outputs": [
     {
@@ -586,7 +580,7 @@
        "array([0., 0., 0., 0., 0., 1., 0., 0., 0., 0.])"
       ]
      },
-     "execution_count": 271,
+     "execution_count": 349,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -597,7 +591,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 283,
+   "execution_count": 350,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -606,36 +600,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 288,
+   "execution_count": 363,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch  0  loss:  31.00948909362405\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\hp\\AppData\\Local\\Temp\\ipykernel_5180\\2414442622.py:3: RuntimeWarning: overflow encountered in exp\n",
-      "  temp = np.sum(np.exp(z), axis=1, keepdims=True)\n",
-      "C:\\Users\\hp\\AppData\\Local\\Temp\\ipykernel_5180\\2414442622.py:4: RuntimeWarning: overflow encountered in exp\n",
-      "  return np.exp(z) / temp\n",
-      "C:\\Users\\hp\\AppData\\Local\\Temp\\ipykernel_5180\\2414442622.py:4: RuntimeWarning: invalid value encountered in divide\n",
-      "  return np.exp(z) / temp\n"
+      "Epoch  0  loss:  13.304363974866611\n",
+      "Epoch  10  loss:  13.304080173735478\n",
+      "Epoch  20  loss:  13.303836913965029\n",
+      "Epoch  30  loss:  13.303639067537961\n",
+      "Epoch  40  loss:  13.303499543379761\n",
+      "Epoch  50  loss:  13.303461729847541\n",
+      "Epoch  60  loss:  13.303716984401888\n",
+      "Epoch  70  loss:  13.30526465105611\n",
+      "Epoch  80  loss:  13.313765650123823\n",
+      "Epoch  90  loss:  13.362891716337579\n"
      ]
     }
    ],
    "source": [
-    "model.train(X_train, y_train_one_hot, epochs=2, learning_rate=0.01)"
+    "model.train(X_train, y_train_one_hot, epochs=100, learning_rate=1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 289,
+   "execution_count": 364,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -644,14 +635,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 290,
+   "execution_count": 368,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy:  0.098\n"
+      "Accuracy:  0.0896\n"
      ]
     }
    ],
@@ -659,6 +650,13 @@
     "accuracy = np.mean(y_pred == test_labels)\n",
     "print(\"Accuracy: \", accuracy)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
