--- a/scratch-nn.ipynb
+++ b/scratch-nn.ipynb
@@ -365,14 +365,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 314,
+   "execution_count": 369,
    "metadata": {},
    "outputs": [],
    "source": [
     "class Activation:\n",
     "    def softmax(self, z):\n",
-    "        temp = np.sum(np.exp(z)) \n",
-    "        return np.exp(z) / temp\n",
+    "        return 1/sum(np.exp(z)) * np.exp(z)\n",
     "    \n",
     "    def relu(self, z):\n",
     "        return np.maximum(0, z)\n",
@@ -408,29 +407,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 398,
    "metadata": {},
    "outputs": [],
    "source": [
-    "class DenseLayer:\n",
-    "    def __init__(self, units, a_in, activation=None):\n",
-    "        self.units = units \n",
-    "        self.a_in = a_in\n",
-    "        self.activation = activation\n",
-    "        self.w = np.zeros(shape=(a_in[1], units)) #!needs modification\n",
-    "        self.b = np.zeros(units)\n",
+    "# class DenseLayer:\n",
+    "#     def __init__(self, units, a_in, activation=None):\n",
+    "#         self.units = units \n",
+    "#         self.a_in = a_in\n",
+    "#         self.activation = activation\n",
+    "#         self.w = np.zeros(shape=(a_in[1], units)) #!needs modification\n",
+    "#         self.b = np.zeros(units)\n",
     "\n",
-    "    def __str__(self):\n",
-    "        return f'''\n",
-    "        Number of units: {self.units}\n",
-    "        Input shape(shape): {self.a_in}\n",
-    "        weight has shape(w.shape): {self.w.shape}\n",
-    "        bias has shape(b.shape): {self.b.shape}\n",
-    "        '''\n",
+    "#     def __str__(self):\n",
+    "#         return f'''\n",
+    "#         Number of units: {self.units}\n",
+    "#         Input shape(shape): {self.a_in}\n",
+    "#         weight has shape(w.shape): {self.w.shape}\n",
+    "#         bias has shape(b.shape): {self.b.shape}\n",
+    "#         '''\n",
     "\n",
-    "    def output(self, a_in):\n",
-    "        # if(self.activation == None): return a_in@self.w + self.b\n",
-    "        return self.activation(a_in@self.w + self.b)\n",
+    "#     def output(self, a_in):\n",
+    "#         # if(self.activation == None): return a_in@self.w + self.b\n",
+    "#         return self.activation(a_in@self.w + self.b)\n",
     "\n",
     "        "
    ]
@@ -488,7 +487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 346,
+   "execution_count": 393,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -539,7 +538,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 347,
+   "execution_count": 371,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -551,7 +550,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 348,
+   "execution_count": 394,
    "metadata": {},
    "outputs": [
     {
@@ -560,7 +559,7 @@
        "(60000, 10)"
       ]
      },
-     "execution_count": 348,
+     "execution_count": 394,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -571,7 +570,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 349,
+   "execution_count": 395,
    "metadata": {},
    "outputs": [
     {
@@ -580,7 +579,7 @@
        "array([0., 0., 0., 0., 0., 1., 0., 0., 0., 0.])"
       ]
      },
-     "execution_count": 349,
+     "execution_count": 395,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -591,7 +590,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 350,
+   "execution_count": 396,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -600,33 +599,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 363,
+   "execution_count": 397,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch  0  loss:  13.304363974866611\n",
-      "Epoch  10  loss:  13.304080173735478\n",
-      "Epoch  20  loss:  13.303836913965029\n",
-      "Epoch  30  loss:  13.303639067537961\n",
-      "Epoch  40  loss:  13.303499543379761\n",
-      "Epoch  50  loss:  13.303461729847541\n",
-      "Epoch  60  loss:  13.303716984401888\n",
-      "Epoch  70  loss:  13.30526465105611\n",
-      "Epoch  80  loss:  13.313765650123823\n",
-      "Epoch  90  loss:  13.362891716337579\n"
+      "Epoch  0  loss:  11.002169119696967\n"
      ]
     }
    ],
    "source": [
-    "model.train(X_train, y_train_one_hot, epochs=100, learning_rate=1)"
+    "model.train(X_train, y_train_one_hot, epochs=10, learning_rate=1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 364,
+   "execution_count": 399,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -635,14 +625,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 368,
+   "execution_count": 400,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy:  0.0896\n"
+      "Accuracy:  0.0625\n"
      ]
     }
    ],
